<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="Profile"

            />
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/ic_menu_bmi"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_water_reminder"
            android:icon="@drawable/ic_menu_water_reminder"
            android:title="@string/menu_water_reminder" />
        <item
            android:id="@+id/nav_exercise"
            android:icon="@drawable/ic_menu_exercise"
            android:title="@string/menu_exercise"
           />
    </group>

    <item
        android:title="Communicate"
        android:id="@+id/communicate"
        >
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
